Fixed padding on ios

--- a/Server/ClientApp/src/app/nav/nav.component.scss
+++ b/Server/ClientApp/src/app/nav/nav.component.scss
@@ -20,14 +20,24 @@
   z-index: 1;
 }
 
+.greetingsText {
+  width: calc(100vw);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .flex-spacer {
   flex-grow: 1;
 }
 
 #bottom-bar {
-  display: flex; justify-content: space-around; align-items: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   z-index: 2;
-  width: 100%; height: 56px;
+  width: 100%;
+  height: 56px;
 
   i {
     padding: 8px;
