--- a/Server/ClientApp/src/styles.scss
+++ b/Server/ClientApp/src/styles.scss
@@ -42,7 +42,9 @@ body {
 }
 
 .sidenav-container, .sidenav-container-full {
-  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+  padding-top: env(safe-area-inset-top);
+  padding-right: env(safe-area-inset-right);
+  padding-left: env(safe-area-inset-left);
 }
 
 .mat-sidenav-fixed {
